Fixed header and added images folder

--- a/main.tex
+++ b/main.tex
@@ -70,14 +70,14 @@ breaklinks=true,
 \numberofauthors{3}
 \author{
   \alignauthor Giuseppe Callari\\
-    \affaddr{Katholieke Universiteit Leuven}\\
-    \email{giuseppe.callari@student.kuleuven.be}\\
+    \affaddr{\normalsize Katholieke Universiteit Leuven}\\
+    \email{\normalsize  giuseppe.callari@student.kuleuven.be}\\
   \alignauthor Michael Vincken\\
-    \affaddr{Katholieke Universiteit Leuven}\\
-    \email{michael.vincken@student.kuleuven.be}\\
+    \affaddr{\normalsize Katholieke Universiteit Leuven}\\
+    \email{\normalsize michael.vincken@student.kuleuven.be}\\
   \alignauthor Stefan Pante\\
-    \affaddr{Katholieke Universiteit Leuven}\\
-    \email{stefan.pante@student.kuleuven.be}\\
+    \affaddr{\normalsize Katholieke Universiteit Leuven}\\
+    \email{\normalsize stefan.pante@student.kuleuven.be}\\
 }
 
 \maketitle
