Added layout figure

--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,23 @@ As stated previously, a Formula One racing team consists of several drivers. In 
 
 For our visualisation, we made use of two data sets, namely Ergast API and Formula Racing Data Set. The Ergast API provides data for the Formula One and Formula E serie from the beginning of the world championships in 1950 and 2015 respectively. At first, we wanted to make a visualisation with detailed information including the duration of pit stops and lap times. A problem we encountered was that the Ergast API only provides this kind of data starting from 2008. To overcome this problem we shifted our focus on driver and constructors performances through the years.
 
-\section{OUR VISUALISATION}
+\section{Our visualisation}
+\begin{figure*}[tp]
+  \centering
+  \includegraphics[width=1\textwidth]{images/overview.png}
+  \caption{Overview of our visualisation showing (1) the timeline, (2) the navigator and (3) the statistics}
+  \label{fig:overview}
+\end{figure*}
+
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{images/layout.pdf}
+  \caption{Overview of our visualisation showing (1) the timeline, (2) the navigator and (3) the statistics}
+  \label{fig:layout}
+\end{figure}
+
+
 Our visualisation as shown in Figure XXX consists of two parts: the time line is the main part of our visualisation, where we provide an overview of seasonal wins for the different drivers and constructors. The second part, situated under the timeline, focuses on two specific drivers, so as to enable a comparison of their performance. 
 
 \subsection{Time line}
