Updated biography, added stacked bar

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,39 +1,53 @@
 @misc{fifaranking,
   title = {Marcelo Duhalde, Fifa Ranking For The Gulf National Teams.},
   howpublished = {\url{http://visualizing.org/visualizations/fifa-ranking-gulf-national-teams}},
-  note = {2015-04-22}
+  note = {accessed 2015-04-22}
 }
 
 @misc{olympic,
   title = {Olympic, Official Olympic Games Results},
   howpublished = {\url{http://www.olympic.org/olympic-results/}},
-  note = {2015-05-13}
+  note = {accessed 2015-05-13}
 }
 
 @misc{statista,
   title = {Statista, Top 50 Formula 1 drivers based on number of podium finishes from 1950 to 2014},
   howpublished = {\url{http://www.statista.com/statistics/263095/formula-1-drivers-by-number-of-podium-finishes/}},
-  note = {2015-05-13}
+  note = {accessed 2015-05-13}
 }
 
 
 @misc{stats,
   title = {Stats, F1, Statistics Drivers},
   howpublished = {\url{http://www.statsf1.com/en/statistiques/pilote/podium/age.aspx}},
-  note = {2015-05-13}
+  note = {accessed 2015-05-13}
 }
 
 @misc{motogp,
   title = {MotoGP},
   howpublished = {\url{http://www.motogp.com/en/Results+Statistics/Statistics}},
-  note = {2015-05-13}
+  note = {accessed 2015-05-13}
 }
 
 @misc{gphub,
   title = {GP Hub Motorsport, Which F1 Team has the most podiums this season?},
   howpublished = {\url{http://www.gp-hub.com/stats/which-f1-team-has-the-most-podiums-this-season/}},
-  note = {2015-05-13}
+  note = {accessed 2015-05-13}
 }
+
+ @misc{ wiki,
+   author = "Wikipedia",
+   title = {History of Formula One regulations},
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=History_of_Formula_One_regulations&oldid=661084170}},
+   note = {accessed 2015-05-22}
+ }
+
+ @misc{ wikipoints,
+   author = "Wikipedia",
+   title = {List of Formula One World Championship points scoring systems},
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=List_of_Formula_One_World_Championship_points_scoring_systems&oldid=662810926}},
+   note = "{accessed 2015-05-03}
+ }
 
 @inproceedings{blaise2008experimenting,
   title={Experimenting timelines for artefacts analysis: from time distribution to information visualisation},
