--- a/main.tex
+++ b/main.tex
@@ -91,8 +91,13 @@ This paper describes the design and implementation of a visualisation of Formula
 Information visualisation; Formula One; Race results; Motor sport; Seasonal wins; Drivers; Constructors;
 }
 
-\category{H.5.m.}{Information Interfaces and Presentation (e.g. HCI)}{Miscellaneous}
+\category{H.5.m.}{Information Interfaces and Presentation (e.g. HCI)}{Miscelaneous}
 
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{images/stackedbar.pdf}
+\end{center}
+\end{figure}
 
 \section{Introduction}
 The FIA Formula One World Championship, better known as Formula One or F1, is one of the most popular motor sports in the world. The F1 season consists of a series of races, also called Grands Prix, held throughout the world. Each season consists of a certain number of races. During a season, a number of teams or constructors (we will use these names interchangeable in this paper) compete with each other. Each team consists of two drivers and some additional secondary drivers. It is important to note that a team may only use two cars during a race. After each race, drivers receive points depending on their finishing position. In the current system, the top ten driver-car combinations are awarded points. Based on the racing result of the drivers at the end of the season, the team with the highest cumulative score wins the constructors title and the driver with the highest individual score wins the World Championship title.
