Different types of navigators

--- a/main.tex
+++ b/main.tex
@@ -96,6 +96,15 @@ Information visualisation; Formula One; Race results; Motor sport; Seasonal wins
 \begin{figure}
 \begin{center}
 \includegraphics[width=\columnwidth]{images/stackedbar.pdf}
+\caption{}
+\end{center}
+\end{figure}
+
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\columnwidth]{images/navigators.jpg}
+\caption{}
 \end{center}
 \end{figure}
 
