--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,53 +1,3 @@
-@misc{fifaranking,
-  title = {Marcelo Duhalde, Fifa Ranking For The Gulf National Teams.},
-  howpublished = {\url{http://visualizing.org/visualizations/fifa-ranking-gulf-national-teams}},
-  note = {accessed 2015-04-22}
-}
-
-@misc{olympic,
-  title = {Olympic, Official Olympic Games Results},
-  howpublished = {\url{http://www.olympic.org/olympic-results/}},
-  note = {accessed 2015-05-13}
-}
-
-@misc{statista,
-  title = {Statista, Top 50 Formula 1 drivers based on number of podium finishes from 1950 to 2014},
-  howpublished = {\url{http://www.statista.com/statistics/263095/formula-1-drivers-by-number-of-podium-finishes/}},
-  note = {accessed 2015-05-13}
-}
-
-
-@misc{stats,
-  title = {Stats, F1, Statistics Drivers},
-  howpublished = {\url{http://www.statsf1.com/en/statistiques/pilote/podium/age.aspx}},
-  note = {accessed 2015-05-13}
-}
-
-@misc{motogp,
-  title = {MotoGP},
-  howpublished = {\url{http://www.motogp.com/en/Results+Statistics/Statistics}},
-  note = {accessed 2015-05-13}
-}
-
-@misc{gphub,
-  title = {GP Hub Motorsport, Which F1 Team has the most podiums this season?},
-  howpublished = {\url{http://www.gp-hub.com/stats/which-f1-team-has-the-most-podiums-this-season/}},
-  note = {accessed 2015-05-13}
-}
-
- @misc{ wiki,
-   author = "Wikipedia",
-   title = {History of Formula One regulations},
-   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=History_of_Formula_One_regulations&oldid=661084170}},
-   note = {accessed 2015-05-22}
- }
-
- @misc{ wikipoints,
-   author = "Wikipedia",
-   title = {List of Formula One World Championship points scoring systems},
-   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=List_of_Formula_One_World_Championship_points_scoring_systems&oldid=662810926}},
-   note = "{accessed 2015-05-03}
- }
 
 @inproceedings{blaise2008experimenting,
   title={Experimenting timelines for artefacts analysis: from time distribution to information visualisation},
@@ -115,14 +65,116 @@
   organization={ACM}
 }
 
-@misc{records,
-  title = {World of Records},
-  howpublished = {\url{http://visualization.geblogs.com/visualization/records/}},
-  note = {2015-05-11}
+
+
+@inproceedings{shneiderman1996eyes,
+  title={The eyes have it: A task by data type taxonomy for information visualizations},
+  author={Shneiderman, Ben},
+  booktitle={Visual Languages, 1996. Proceedings., IEEE Symposium on},
+  pages={336--343},
+  year={1996},
+  organization={IEEE}
 }
 
-@misc{records,
-  title = {Justin Palmer’s D3 tooltip library},
-  howpublished = {\url{http://bl.ocks.org/Caged/6476579}},
-  note = {2015-04-18}
+@ONLINE{records,
+  title = {World of Records},
+  url = {http://visualization.geblogs.com/visualization/records/},
+  month = {May},
+  year = {2015},
+  urldate = {2015-05-11}
 }
+
+@ONLINE{records,
+  title = {Justin Palmer’s D3 tooltip library},
+  url = {http://bl.ocks.org/Caged/6476579},
+  month = {Apr},
+  year = {2015},
+  urldate = {2015-04-18}
+}
+
+@ONLINE{lapchart,
+  author = "{David Ortiz}"
+  title = "{Lap chart visualization of Formula 1 races.}",
+  url = {http://davidor.github.io/formula1-lap-charts/},
+  month = {Apr},
+  year = {2015},
+  urldate = {2015-04-22}
+}
+
+
+@ONLINE{fifaranking,
+  title = {Marcelo Duhalde, Fifa Ranking For The Gulf National Teams.},
+  url = {http://visualizing.org/visualizations/fifa-ranking-gulf-national-teams},
+  month = {Apr},
+  year = {2015},
+  urldate = {2015-04-22}
+}
+
+@ONLINE{olympic,
+  title = {Olympic, Official Olympic Games Results},
+  url = {http://www.olympic.org/olympic-results/},
+  month = {May},
+  year = {2015},
+  urldate = {2015-05-13}
+},
+
+@ONLINE{statista,
+  title = {Statista, Top 50 Formula 1 drivers based on number of podium finishes from 1950 to 2014},
+  url = {http://www.statista.com/statistics/263095/formula-1-drivers-by-number-of-podium-finishes/},
+    month = {May},
+  year = {2015},
+  urldate = {2015-05-13}
+},
+
+
+@ONLINE{stats,
+  title = {Stats, F1, Statistics Drivers},
+  url = {http://www.statsf1.com/en/statistiques/pilote/podium/age.aspx},
+  month = {May},
+  year = {2015},
+  urldate = {2015-05-13}
+},
+
+@ONLINE{motogp,
+  title = {MotoGP},
+  url = {http://www.motogp.com/en/Results+Statistics/Statistics},
+  month = {May},
+  year = {2015},
+  urldate = {2015-05-13}
+},
+
+@ONLINE{gphub,
+  title = {GP Hub Motorsport, Which F1 Team has the most podiums this season?},
+  url = {http://www.gp-hub.com/stats/which-f1-team-has-the-most-podiums-this-season/},
+  month = {May},
+  year = {2015},
+  urldate = {2015-05-13}
+},
+
+@ONLINE{ergast,
+  author={Thomas Brieuc},
+  title = {Ergast Developer API},
+  url = {http://ergast.com/mrd/},
+  month = {March},
+  year = {2015},
+  urldate = {2015-03-22}
+  
+},
+
+ @ONLINE{wiki,
+   author = {Wikipedia},
+   title = {History of Formula One regulations},
+   url = {http://en.wikipedia.org/w/index.php?title=History_of_Formula_One_regulations&oldid=661084170},
+   month = {May},
+   year = {2015},
+   urldate = {2015-05-22}
+ },
+
+ @ONLINE{wikipoints,
+   title = {List of Formula One World Championship points scoring systems},
+   url = {http://en.wikipedia.org/w/index.php?title=List_of_Formula_One_World_Championship_points_scoring_systems&oldid=662810926},
+   month = {May},
+   year = {2015},
+   urldate = {2015-05-03}
+ },
+
