--- a/bibliography.bib
+++ b/bibliography.bib
@@ -93,8 +93,8 @@
 }
 
 @ONLINE{lapchart,
-  author = "{David Ortiz}"
-  title = "{Lap chart visualization of Formula 1 races.}",
+  
+  title = {David Ortiz, Lap chart visualization of Formula 1 races.},
   url = {http://davidor.github.io/formula1-lap-charts/},
   month = {Apr},
   year = {2015},
@@ -103,6 +103,7 @@
 
 
 @ONLINE{fifaranking,
+  
   title = {Marcelo Duhalde, Fifa Ranking For The Gulf National Teams.},
   url = {http://visualizing.org/visualizations/fifa-ranking-gulf-national-teams},
   month = {Apr},
