--- a/main.tex
+++ b/main.tex
@@ -168,7 +168,7 @@ more insight in our dataset, we performed some data analysis. The number of driv
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=1\columnwidth]{images/dense.png}
+\includegraphics[width=1\columnwidth]{images/dense.PNG}
 \label{fig:numYears}
 \caption{Figure illustrating how the timeline looks when ten years are visualised at the same time}
 \end{figure}
